Slumptal som värden för finalfält, tester inte uppdaterade